# keibrush

./: Cargo.toml  README.md  rustfmt.toml
example-runner/: Cargo.toml
example-runner/src/: lib.rs
examples/: dvd.rs  gradient.rs  simple.rs  text.rs
src/: lib.rs  renderer.rs  util.rs
src/element/: brush.rs  color.rs  fill.rs  layer.rs  mod.rs  source.rs  stroke.rs  text.rs  text_context.rs  text_layout.rs
src/element/path/: builder.rs  iter.rs  mod.rs  shape.rs
src/math/: affine2.rs  macros.rs  mat2.rs  mod.rs  num.rs  point2.rs  rect.rs  size2.rs  vec2.rs
src/renderer/: context.rs  mod.rs
