[package]
name = "keibrush"

authors = ["Alexandra Reaves <nyxalexandra@proton.me>"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/NyxAlexandra/keibrush"

[features]
default = ["renderer"]
#! Enables the renderer.
#! 
#! Disable if you just want the scene types.
renderer = ["dep:vello", "dep:parley", "dep:thiserror"]

[dependencies]
vello = { version = "0.2.1", optional = true }
parley = { version = "0.1.0", optional = true }
thiserror = { workspace = true, optional = true }

[dev-dependencies]
example-runner.path = "./example-runner"

[workspace]
members = ["example-runner"]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0.63"
